Minor tweak of note regarding tensor product definition

--- a/LinA2Cards.tex
+++ b/LinA2Cards.tex
@@ -3678,8 +3678,8 @@
     \xplain{78d71d52-c77f-4bf8-8312-ce13d136f6f1}
 
     \xfield{
-        Das \textbf{Tensorprodukt} $V_1\otimes\cdots\otimes V_n$ von $K$-Vektorräumen $V_1,\cdots,V_n$ ist ein $K$-Vektorraum zusammen mit einer (kanonischen) Abbildung\\ $\text{can}\colon V_1\times \cdots \times V_n \longrightarrow V_1\otimes\cdots\otimes V_n$
-        mit folgender universeller Eigenschaft:\\
+        Das \textbf{Tensorprodukt} $V_1\otimes\cdots\otimes V_n$ von $K$-Vektorräumen $V_1,\cdots,V_n$ ist ein $K$-Vektorraum, der definiert wird durch eine kanonische Abbildung\\ $\text{can}\colon V_1\times \cdots \times V_n \longrightarrow V_1\otimes\cdots\otimes V_n$
+        mit folgender universellen Eigenschaft:\\
         $\text{can}$ ist \hide{multilinear} und\\
          für jeden $K$-Vektorraum $T$ und jede multilineare Abbildung $t\colon V_1\times\cdots\times V_n \longrightarrow T$
         existiert genau eine $K$-lineare Abbildung
@@ -3687,8 +3687,8 @@
         mit $t'\circ \text{can} = t$.
     }
     \begin{field}
-        Das \textbf{Tensorprodukt} $V_1\otimes\cdots\otimes V_n$ von $K$-Vektorräumen $V_1,\cdots,V_n$ ist ein $K$-Vektorraum zusammen mit einer (kanonischen) Abbildung\\ $\text{can}\colon V_1\times \cdots \times V_n \longrightarrow V_1\otimes\cdots\otimes V_n$
-        mit folgender universeller Eigenschaft:\\
+        Das \textbf{Tensorprodukt} $V_1\otimes\cdots\otimes V_n$ von $K$-Vektorräumen $V_1,\cdots,V_n$ ist ein $K$-Vektorraum, der definiert wird durch eine kanonische Abbildung\\ $\text{can}\colon V_1\times \cdots \times V_n \longrightarrow V_1\otimes\cdots\otimes V_n$
+        mit folgender universellen Eigenschaft:\\
         $\text{can}$ ist multilinear und\\
          für jeden $K$-Vektorraum $T$ und jede multilineare Abbildung $t\colon V_1\times\cdots\times V_n \longrightarrow T$
         existiert genau eine $K$-lineare Abbildung
@@ -3698,8 +3698,8 @@
     \end{field}
 
     \xfield{
-        Das \textbf{Tensorprodukt} $V_1\otimes\cdots\otimes V_n$ von $K$-Vektorräumen $V_1,\cdots,V_n$ ist ein $K$-Vektorraum zusammen mit einer (kanonischen) Abbildung\\ $\text{can}\colon V_1\times \cdots \times V_n \longrightarrow V_1\otimes\cdots\otimes V_n$
-        mit folgender universeller Eigenschaft:\\
+        Das \textbf{Tensorprodukt} $V_1\otimes\cdots\otimes V_n$ von $K$-Vektorräumen $V_1,\cdots,V_n$ ist ein $K$-Vektorraum, der definiert wird durch eine kanonische Abbildung\\ $\text{can}\colon V_1\times \cdots \times V_n \longrightarrow V_1\otimes\cdots\otimes V_n$
+        mit folgender universellen Eigenschaft:\\
         $\text{can}$ ist multilinear und\\
          für jeden $K$-Vektorraum $T$ und jede multilineare Abbildung $t\colon V_1\times\cdots\times V_n \longrightarrow T$
         existiert \hide{genau eine $K$-lineare Abbildung
@@ -3707,8 +3707,8 @@
         mit $t'\circ \text{can} = t$}.
     }
     \begin{field}
-        Das \textbf{Tensorprodukt} $V_1\otimes\cdots\otimes V_n$ von $K$-Vektorräumen $V_1,\cdots,V_n$ ist ein $K$-Vektorraum zusammen mit einer (kanonischen) Abbildung\\ $\text{can}\colon V_1\times \cdots \times V_n \longrightarrow V_1\otimes\cdots\otimes V_n$
-        mit folgender universeller Eigenschaft:\\
+        Das \textbf{Tensorprodukt} $V_1\otimes\cdots\otimes V_n$ von $K$-Vektorräumen $V_1,\cdots,V_n$ ist ein $K$-Vektorraum, der definiert wird durch eine kanonische Abbildung\\ $\text{can}\colon V_1\times \cdots \times V_n \longrightarrow V_1\otimes\cdots\otimes V_n$
+        mit folgender universellen Eigenschaft:\\
         $\text{can}$ ist multilinear und\\
          für jeden $K$-Vektorraum $T$ und jede multilineare Abbildung $t\colon V_1\times\cdots\times V_n \longrightarrow T$
         existiert genau eine $K$-lineare Abbildung
